// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component testing Input 1`] = `
<DocumentFragment>
  <input
    class="sc-bdvvaa cCNjny"
  />
</DocumentFragment>
`;

exports[`Input component testing Input disabled 1`] = `
<DocumentFragment>
  <input
    class="sc-bdvvaa cCNjny"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Input component testing Input error 1`] = `
<DocumentFragment>
  <input
    class="sc-bdvvaa kaiiyD"
  />
</DocumentFragment>
`;

exports[`Input component testing Input multiline 1`] = `
<DocumentFragment>
  <textarea
    class="sc-bdvvaa cCNjny"
  />
</DocumentFragment>
`;
